update lstm model using last layer

--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -1703,7 +1703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1712,7 +1712,7 @@
        "10"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2348,6 +2348,354 @@
     "1. RNN-based model\n",
     "2. Naive-bayes model\n",
     "3. Bert model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Baseline -TFiDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        I watched this film because I'm a big fan of R...\n",
+       "1        It does not seem that this movie managed to pl...\n",
+       "2              Enough is not a bad movie , just mediocre .\n",
+       "3        my friend and i rented this one a few nights a...\n",
+       "4        Just about everything in this movie is wrong, ...\n",
+       "                               ...                        \n",
+       "29336    It 's one of the most honest films ever made a...\n",
+       "29337    An absorbing and unsettling psychological drama .\n",
+       "29338    Soylent Green IS...a really good movie, actual...\n",
+       "29339    There just isn't enough here. There a few funn...\n",
+       "29340    This show was absolutely terrible. For one Geo...\n",
+       "Name: review, Length: 29341, dtype: object"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df['review']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TfidfVectorizer(stop_words='english', token_pattern='(?u)\\\\b[A-Za-z]+\\\\b')"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "vectorizer = TfidfVectorizer(stop_words='english', token_pattern=r'(?u)\\b[A-Za-z]+\\b')\n",
+    "vectorizer.fit(train_df['review'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CountVectorizer(stop_words='english', token_pattern='(?u)\\\\b[A-Za-z]+\\\\b')"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "cv = CountVectorizer(stop_words='english', token_pattern=r'(?u)\\b[A-Za-z]+\\b')\n",
+    "cv.fit(train_df['review'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "75046"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(vectorizer.get_feature_names())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = train_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import precision_recall_fscore_support\n",
+    "from sklearn.linear_model import LogisticRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(model, vectorizer, X):\n",
+    "    prf = {\n",
+    "        'accuracy': list(),\n",
+    "        'precision': list(),\n",
+    "        'recall': list(),\n",
+    "        'f1-score': list()\n",
+    "    }\n",
+    "\n",
+    "    for idx, (train_index, valid_index) in enumerate(kf.split(X)):\n",
+    "        print(f\"Cross validation {idx}-fold\")\n",
+    "        train, valid = train_df.iloc[train_index], train_df.iloc[valid_index]\n",
+    "        X_train, y_train = train['review'], train['sentiment']\n",
+    "        X_valid, y_valid = valid['review'], valid['sentiment']\n",
+    "\n",
+    "        clf = model.fit(vectorizer.transform(X_train), y_train)\n",
+    "        X_valid_transform = vectorizer.transform(X_valid)\n",
+    "        y_preds = clf.predict(X_valid_transform)\n",
+    "        results = precision_recall_fscore_support(y_valid, y_preds, average='binary')\n",
+    "        print(results)\n",
+    "        prf['accuracy'] += [clf.score(X_valid_transform, y_valid)]\n",
+    "        prf['precision'] += [results[0]]\n",
+    "        prf['recall'] += [results[1]]\n",
+    "        prf['f1-score'] += [results[2]]\n",
+    "    return prf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tfidf + Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross validation 0-fold\n",
+      "(0.8552123552123552, 0.8937457969065232, 0.874054587306807, None)\n",
+      "Cross validation 1-fold\n",
+      "(0.8488975356679637, 0.8922972051806408, 0.8700564971751413, None)\n",
+      "Cross validation 2-fold\n",
+      "(0.8578844905905256, 0.8938471940500338, 0.8754966887417218, None)\n",
+      "Cross validation 3-fold\n",
+      "(0.8671373555840821, 0.8947019867549669, 0.8807040417209909, None)\n",
+      "Cross validation 4-fold\n",
+      "(0.8565916398713826, 0.8933601609657947, 0.8745896257386737, None)\n",
+      "Cross validation 5-fold\n",
+      "(0.8688524590163934, 0.8815701929474384, 0.8751651254953765, None)\n",
+      "Cross validation 6-fold\n",
+      "(0.8552123552123552, 0.8842315369261478, 0.8694798822374877, None)\n",
+      "Cross validation 7-fold\n",
+      "(0.8594455190199871, 0.9006756756756756, 0.8795776971296602, None)\n",
+      "Cross validation 8-fold\n",
+      "(0.8666249217282405, 0.9039843239712606, 0.8849104859335039, None)\n",
+      "Cross validation 9-fold\n",
+      "(0.8520408163265306, 0.8888888888888888, 0.8700748941712798, None)\n"
+     ]
+    }
+   ],
+   "source": [
+    "prf = {\n",
+    "    'accuracy': list(),\n",
+    "    'precision': list(),\n",
+    "    'recall': list(),\n",
+    "    'f1-score': list()\n",
+    "}\n",
+    "\n",
+    "for idx, (train_index, valid_index) in enumerate(kf.split(X)):\n",
+    "    print(f\"Cross validation {idx}-fold\")\n",
+    "    train, valid = train_df.iloc[train_index], train_df.iloc[valid_index]\n",
+    "    X_train, y_train = train['review'], train['sentiment']\n",
+    "    X_valid, y_valid = valid['review'], valid['sentiment']\n",
+    "    \n",
+    "    clf = LogisticRegression().fit(vectorizer.transform(X_train), y_train)\n",
+    "    X_valid_transform = vectorizer.transform(X_valid)\n",
+    "    y_preds = clf.predict(X_valid_transform)\n",
+    "    results = precision_recall_fscore_support(y_valid, y_preds, average='binary')\n",
+    "    print(results)\n",
+    "    prf['accuracy'] += [clf.score(X_valid_transform, y_valid)]\n",
+    "    prf['precision'] += [results[0]]\n",
+    "    prf['recall'] += [results[1]]\n",
+    "    prf['f1-score'] += [results[2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy 0.8705225117258856\n",
+      "precision 0.8587899448229817\n",
+      "recall 0.892730296226737\n",
+      "f1-score 0.8754109525650643\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k, v in prf.items():\n",
+    "    print(k, np.mean(v))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tfidf + RandomForest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross validation 0-fold\n",
+      "(0.8378016085790885, 0.8406186953597848, 0.8392077878482713, None)\n",
+      "Cross validation 1-fold\n",
+      "(0.8282208588957055, 0.8282208588957055, 0.8282208588957055, None)\n",
+      "Cross validation 2-fold\n",
+      "(0.8199083169613621, 0.8465179175118324, 0.8330006653359947, None)\n",
+      "Cross validation 3-fold\n",
+      "(0.8421750663129973, 0.8410596026490066, 0.8416169648774022, None)\n",
+      "Cross validation 4-fold\n",
+      "(0.8337765957446809, 0.8410462776659959, 0.8373956594323873, None)\n",
+      "Cross validation 5-fold\n",
+      "(0.8387309980171844, 0.844311377245509, 0.8415119363395226, None)\n",
+      "Cross validation 6-fold\n",
+      "(0.8332212508406187, 0.8243512974051896, 0.82876254180602, None)\n",
+      "Cross validation 7-fold\n",
+      "(0.8367617783676178, 0.852027027027027, 0.8443254101104787, None)\n",
+      "Cross validation 8-fold\n",
+      "(0.8389391979301423, 0.8471587197909863, 0.8430289242768931, None)\n",
+      "Cross validation 9-fold\n",
+      "(0.8310502283105022, 0.8476380572188955, 0.839262187088274, None)\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = RandomForestClassifier(n_jobs=-1)\n",
+    "prf = train(model, vectorizer, X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy 0.833816060079268\n",
+      "precision 0.8340585899959899\n",
+      "recall 0.8412949830769934\n",
+      "f1-score 0.8376332936010948\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k, v in prf.items():\n",
+    "    print(k, np.mean(v))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tfidf + MLP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neural_network import MLPClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross validation 0-fold\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = MLPClassifier()\n",
+    "prf = train(model, vectorizer, X)"
    ]
   },
   {
